--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,10 @@
             <artifactId>workflow-step-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jenkinsci.plugins</groupId>
+            <artifactId>pipeline-model-definition</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>structs</artifactId>
         </dependency>
